# pymake

./: .gitignore  LICENSE  pyproject.toml
src/pymake/: __init__.py  __main__.py  build.py  check.py  create_checkpoint.py  fix.py  help_messages.py  init.py  install.py  restore.py  rollback.py  run.py  test.py  uninstall.py  update.py
src/pymake/licenses/: agpl_3_0.py  apache_2_0.py  bsd_3_clause.py  cc0.py  cc_by_4_0.py  cc_by_nc_4_0.py  cc_by_nc_nd_4_0.py  cc_by_nc_sa_4_0.py  cc_by_nd_4_0.py  cc_by_sa_4_0.py  gpl_3_0.py  lgpl_3_0.py  mit.py  unlicense.py
